--- a/res/layout/layout_vaccine.xml
+++ b/res/layout/layout_vaccine.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/AbsoluteLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/vaccinations"
-    android:gravity="center_horizontal|center_vertical"
-    android:orientation="vertical" >
+    android:background="@drawable/vaccinations" >
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_x="29dp"
+        android:layout_y="-1dp"
+        android:src="@drawable/title_vacc" />
+
+</AbsoluteLayout>
